--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,8 @@
-<p>
-  contact works!
-</p>
+<div class="center">
+    <h5><strong>Receive SMS Online</strong><br>
+      Receive-SMS-online.info is FREE service for receive SMS messages online, based on REAL SIM and shows you the exact information received by the modem with Dynamic Sender ID. On this website you can check if you receive SMS on different routes,or if you receive using the Dynamic Sender ID feature.<br>
+      <strong>How to use?</strong><br>
+      Select one of the numbers listed below and you can see the SMS that reach that number within seconds.All messages are shown, nothing is blocked.<br>
+      </h5>
+</div>
+  
