--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -35,7 +35,7 @@
         
     </div>
     <div class="col-md-5">
-      <img class="image-main" src="https://media.idownloadblog.com/wp-content/uploads/2018/01/iOS-11-Messages-001-251x500.png" alt="New Iphone i messages">
+      <img class="image-main" src="assets/iphone-home.png" alt="New Iphone i messages">
     </div>
   </div>
 
