--- a/src/app/phone-card/phone-card.component.html
+++ b/src/app/phone-card/phone-card.component.html
@@ -1,26 +1,35 @@
-<div class="container-card">
+<div class="container-card" id="recievediv">
         <div class="row">
           <div class="col-md-3 col-sm-6 col-xs-12 " *ngFor="let item of data">
               <a href="#" class="card" [routerLink]="[ '/phone', item.number ]">
-                  <img class="card-img-top" src="https://pgcpsmess.files.wordpress.com/2018/07/0001146-flagge-usa.gif" alt="Card image cap">
+                  <img class="card-img-top" src="assets/flags/{{item.shortCode}}.png" alt="Card image cap">
                   <div class="card-body">
                     <h4 class="card-title">{{item.number}}</h4>
                     <h6 class="card-subtitle mb-2 text-muted">{{item.location}}</h6>
                     <p class="card-text active-card">{{item.status}}</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <p class="card-text"><small class="text-muted">Number Added :  {{item.createdAt}}</small></p>
                   </div>
                 </a>
           </div>
 
           <div class="col-md-3 col-sm-6 col-xs-12">
                 <a href="#" class="card" >
-                    <img class="card-img-top" src="https://pgcpsmess.files.wordpress.com/2018/07/0001146-flagge-usa.gif" alt="Card image cap">
-                    <div class="card-body">
-                      <h4 class="card-title">Your Choice</h4>
-                      <h6 class="card-subtitle mb-2 text-muted">Request the number you want and we'll try our best</h6>
-                      <p class="card-text"><small class="text-muted">Demand Please! we have variety to offer!!</small></p>
+                    <div *ngIf="isLoading === true">
+                      <img class="card-img-top imessage" src="assets/imessage.png" alt="Card image cap">
+                      <div class="card-body">
+                        <h4 class="card-title">Your Choice. We are Listening</h4>
+                        <h6 class="card-subtitle mb-2 text-muted">Request the number you want and we'll try our best</h6>
+                        <p class="card-text"><small class="text-muted">Demand Now! we have variety to offer!!</small></p>
+                      </div>
                     </div>
-                  </a>
+
+                    <div *ngIf="isLoading === false">
+                        <div class="card-body">
+                          <h4 class="card-title">Loading! Please wait a sec</h4>
+                          <div class="spinner"><mat-spinner></mat-spinner></div>
+                        </div>
+                      </div>
+                </a>
             </div>
           
         </div>
