--- a/src/app/upload-form/upload-form.component.html
+++ b/src/app/upload-form/upload-form.component.html
@@ -3,7 +3,12 @@
     <input type="text" matInput name="number" ngModel placeholder="Number">
   </mat-form-field>
   <mat-form-field>
-      <input type="text" matInput name="location" ngModel placeholder="Location">
+    <mat-label> Country</mat-label>
+    <input type="text" matInput name="location" ngModel placeholder="Number">
   </mat-form-field>
+  <mat-form-field>
+  <mat-label> Country Short Code</mat-label>
+  <input type="text" matInput name="shortCode" ngModel placeholder="Short Code">
+</mat-form-field>
   <button mat-button type="submit">Submit</button>
 </form>
