--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,7 +26,7 @@
 <div class="main-screen">
 <nav class="navbar navbar-expand-lg navbar-expand-md" style="background-color: transparent;">
   <a class="navbar-brand" [routerLink]="[ '/']">
-    <img src="https://www.w3.org/html/logo/downloads/HTML5_1Color_White.png"  width="100" height="100"  alt="">
+    <img class="logo" src="assets/logo.png"  width="100" height="100"  alt="">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <i class="material-icons md-48">menu</i>
@@ -53,7 +53,7 @@
 <div class="col-md-7 p-lg-5 my-1">
     <h1 class="display-4 font-weight-normal">Send and Recieve SMS</h1>
     <p class="lead font-weight-normal">Roam the world with entire freedom! and recieve or sms messages without any headache!!</p>
-    <a class="btn main-text-button1" href="#">Recieve Now</a>
+    <a class="btn main-text-button1" href="#recievediv">Recieve Now</a>
   </div>
 </div>
   
