--- a/src/app/phone-list/phone-list.component.css
+++ b/src/app/phone-list/phone-list.component.css
@@ -31,10 +31,10 @@
 }
 td.mat-cell{
   padding: 7px 5px;
-  font-size: 120%;
+  font-size: 3vh;
 }
 td.body{
-  font-size: 200%
+  font-size: 3.5vh;
 }
 th.mat-header-cell{
   font-size: 130%;
@@ -75,4 +75,16 @@ table{
 .mat-button-toggle-group{
   margin-left:50%;
   margin-top:5px;
+}
+.phoneListImage{
+  height: 30px;
+  width: auto;
+  margin-right: 10px;
+}
+td.mat-cell:last-of-type{
+  padding-right: 5px;
+}
+
+td.mat-cell:first-of-type{
+  padding-left: 5px;
 }
